--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -64,7 +64,7 @@
             <img src="PixelArt/Millenia/Fiche/Léo.png" style="float: left; margin-left: -43%; margin-top: 240%; height: 8.5%;">
 
 
-
+            <h1 style="margin-left: 2%; margin-top: 116%;"><font color="#6c0eff"> <u>Les Magie</u> :</font></h1>
 
 
             <a href="HeadinCloud.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
