--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -64,7 +64,9 @@
             <img src="PixelArt/Millenia/Fiche/Léo.png" style="float: left; margin-left: -43%; margin-top: 240%; height: 8.5%;">
 
 
-            <h1 style="margin-left: 2%; margin-top: 116%;"><font color="#6c0eff"> <u>Les Magie</u> :</font></h1>
+            <h1 style="margin-left: 2%; margin-top: 235%;"><font color="#6c0eff"> <u>Les Magie</u> :</font></h1>
+            <img src="PixelArt/Millenia/Mage/LesMagie.png" style="float: left; margin-left: -89%; margin-top: 311.5%; height: 4.4%;">
+            <p style="margin-left: 50.10%; margin-top: 247%; margin-right: 2%; font-size: 2.40vh;">Le monde de Millenia possede 12 magies. Elles ont pour embleme les 12 Symbole en dessous du message discord. Chaque personne possede 1 à 2 d'entre elles represente par la couleur de leurs yeux.</p>
 
 
             <a href="HeadinCloud.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
