--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -65,8 +65,21 @@
 
 
             <h1 style="margin-left: 2%; margin-top: 235%;"><font color="#6c0eff"> <u>Les Magie</u> :</font></h1>
-            <img src="PixelArt/Millenia/Mage/LesMagie.png" style="float: left; margin-left: -89%; margin-top: 311.5%; height: 4.4%;">
-            <p style="margin-left: 50.10%; margin-top: 247%; margin-right: 2%; font-size: 2.40vh;">Le monde de Millenia possede 12 magies. Elles ont pour embleme les 12 Symbole en dessous du message discord. Chaque personne possede 1 à 2 d'entre elles represente par la couleur de leurs yeux.</p>
+            <img src="PixelArt/Millenia/Mage/LesMagie.png" style="float: left; margin-left: -89%; margin-top: 309.5%; height: 4.4%;">
+            <p style="margin-left: 47.10%; margin-top: 252%; margin-right: 4%; font-size: 2.40vh;">Le monde de Millenia possede 12 magies. Elles ont pour embleme les 12 Symbole en dessous du message discord. Chaque personne possede 1 a 2 d'entre elles represente par la couleur de leurs yeux.</p>
+            
+            <img src="PixelArt/Millenia/Mage/Fire.png" style="float: left; margin-left: -95%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Water.png" style="float: left; margin-left: -90%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Thunder.png" style="float: left; margin-left: -85%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Wind.png" style="float: left; margin-left: -80%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Rock.png" style="float: left; margin-left: -75%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Chao.png" style="float: left; margin-left: -70%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Life.png" style="float: left; margin-left: -65%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Death.png" style="float: left; margin-left: -60%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Galaxy.png" style="float: left; margin-left: -55%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Illusion.png" style="float: left; margin-left: -50%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Beast.png" style="float: left; margin-left: -45%; margin-top: 270%; height: 0.75%;">
+            <img src="PixelArt/Millenia/Mage/Dream.png" style="float: left; margin-left: -40%; margin-top: 270%; height: 0.75%;">
 
 
             <a href="HeadinCloud.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
