--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -81,20 +81,55 @@
             <img src="PixelArt/Millenia/Mage/Beast.png" style="float: left; margin-left: -45%; margin-top: 270%; height: 0.75%;">
             <img src="PixelArt/Millenia/Mage/Dream.png" style="float: left; margin-left: -40%; margin-top: 270%; height: 0.75%;">
 
+            <img src="PixelArt/Millenia/Mage/Fire.png" style="float: left; margin-left: -97%; margin-top: 280%; height: 0.75%;">
+            <p style="margin-left: 3%; margin-top: 20%; margin-right: 52%; font-size: 2.40vh;">••••<font color="#b44038">Le Feu : </font>La Magie du Feu est une magie qui permet de generer des flammes de toutes sortes mais elle concerne aussi la lave et les explosifs, il serra donc possible pour le joueur avec des personnages de cet attribut d'embraser les armes de leur allie comme genere des flammes.</p>
+
+            <img src="PixelArt/Millenia/Mage/Water.png" style="float: left; margin-left: -45%; margin-top: 18.5%; height: 0.75%;">
+            <p style="margin-left: 55%; margin-top: -14%; margin-right: 3%; font-size: 2.40vh;">••••<font color="#336cb9">L'Eau : </font>La Magie de L'Eau concerne toutes les formes d'eau, il est donc possible de generer des pique de glace, cree des jets d'eau ou ce deplace en vapeur. cet attribut est un attribut qui peut avoir beaucoup d'interaction avec les autres attributs ainsi qu'avoir beaucoup d'utilite pour supporter son equipe.</p>
+
+            <img src="PixelArt/Millenia/Mage/Thunder.png" style="float: left; margin-left: -97%; margin-top: 0%; height: 0.75%;">
+            <p style="margin-left: 3%; margin-top: 0%; margin-right: 52%; font-size: 2.40vh;">••••<font color="#c6b42c">La Fondre : </font>La Magie de la Foudre se separe en deux categories, elle est principalement connue pour sa capacite a generer de l'electricite ainsi qu'a faire tomber de la foudre, ce qui est une magie tres offensive a courte distance mais surtout pratique pour pouvoir aveugler et etourdir les ennemies. L'autre grand principe de la magie de la foudre est la capacite a augmenter la rapidite des mouvements, augmentent les deplacements par tour. </p>
+
+            <img src="PixelArt/Millenia/Mage/Wind.png" style="float: left; margin-left: -45%; margin-top: 0%; height: 0.75%;">
+            <p style="margin-left: 55%; margin-top: -18%; margin-right: 3%; font-size: 2.40vh;">•••••<font color="#41ab4a">Le Vent : </font>La Magie du Vent permet d'avoir le controle sur l'air, c'est donc une magie tres polyvalente qui permet d'etre offensif en generant des courants d'air tranchant, defensif en generant des boucliers d'air ou en support en poussant des allies ou ennemis avec de l'air.</p>
+
+            <img src="PixelArt/Millenia/Mage/Rock.png" style="float: left; margin-left: 2.5%; margin-top: 0%; height: 0.75%;">
+            <p style="margin-left: 3%; margin-top: -2%; margin-right: 52%; font-size: 2.40vh;">••••<font color="#b04c27">La Roche : </font>La Magie de la Creation permet de gerer la matiere en termes generaux mais elle permet aussi de les generer pour creer des defenses solides. les materiau le plus facile et solide utilise est souvent la roche mais d'autres materiaux plus solides sont possibles ce qui definira leur efficacite.</p>
+
+            <img src="PixelArt/Millenia/Mage/Chao.png" style="float: left; margin-left: -45%; margin-top: -3.5%; height: 0.75%;">
+            <p style="margin-left: 55%; margin-top: -16%; margin-right: 3%; font-size: 2.40vh;">•••••<font color="#070609">Le Chao : </font>La Magie du Chao ne permet pas grand-chose en dehors de l'offensif, elle peut toujours generer des nuages sombres mais au-dela de ca elle a pour principale utilite de dematerialiser les objets des choses, une magie tres efficace qui reste pas la plus rapide a utilise, il faut souvent un contact phisique pour beaucoup de personnes.</p>
+
+            <img src="PixelArt/Millenia/Mage/Life.png" style="float: left; margin-left: 2.5%; margin-top: 0%; height: 0.75%;">
+            <p style="margin-left: 3%; margin-top: -3%; margin-right: 52%; font-size: 2.40vh;">••••<font color="#c14d8f">La Lumiere : </font>La Magie de Lumiere elle ne permet pas forcement des grands assauts mais permet de se defendre en cas de situation critique avec des flashs et des halos de lumiere qui peuvent eblouir les ennemis, mais dans d'autres cas, elle permet de soigner des allies, ils connaissent les blessures personne et point faibles, leur magie permet donc de bien soigne ainsi que de cibler les points faibles lors de leur attaque.</p>
+
+            <img src="PixelArt/Millenia/Mage/Death.png" style="float: left; margin-left: -45%; margin-top: -3.5%; height: 0.75%;">
+            <p style="margin-left: 55%; margin-top: -18.5%; margin-right: 3%; font-size: 2.40vh;">••••<font color="#771c91">L'Ombre : </font>La Magie de L'Ombre est la magie aussi nommee Magie des Ames, elle a pour objectif de sceller des ames, c'est une magie qui fait des lourds degats aux ames des adversaires cette magie au beaucoup d'autres capacites comme scellees des capacites des son adverse les rendant impossible pendant un certain temps.</p>
+
+            <img src="PixelArt/Millenia/Mage/Galaxy.png" style="float: left; margin-left: 2.5%; margin-top: 0%; height: 0.75%;">
+            <p style="margin-left: 3%; margin-top: -2%; margin-right: 52%; font-size: 2.40vh;">••••<font color="#4a06a7">La Galaxie : </font>La Magie de la Galaxie, la magie qui est considere excellente dans tous les domaines, elle permet de gerer la gravite donc de deplacer des allies pour les rapprocher d'une defense exemple, elle permet d'avoir un controle total aussi sur l'espace et connaissance de tout ce qui les entoure. La magie galactique aussi atteinte toute sa puissance quand les personnages peuvent reduire la gravite des armes allies pour plus sentir leur poids mais aussi generer des mini-étoiles, faire des novas ainsi que des trous noirs.</p>
+
+            <img src="PixelArt/Millenia/Mage/Illusion.png" style="float: left; margin-left: -45%; margin-top: -3.5%; height: 0.75%;">
+            <p style="margin-left: 55%; margin-top: -24.5%; margin-right: 3%; font-size: 2.40vh;">•••••<font color="#a621c1">Les Illusions : </font>La Magie des Illusionniste n'est pas connue pour leur cote destructeur ni leur cote defensif mais pour leur cote discret et leur cote a destabiliser les adversaires. Ils ont le controle sur les sens des etres vivants, il est donc possible pour eux de se rendre invisible en les empechant de le voir, cree des créatures plus vraies que natures pour effrayer les adversaires. Il est aussi possible pour un illusionniste de plongee une personne dans une illusion, de ce fait il serra donc impossible jouer pour cet adversaire mais aussi il subira de grave degat avec ce qu'il verra et aussi ne pourra pas s'en echapper si elle n'est pas perce a jour.</p>
+
+            <img src="PixelArt/Millenia/Mage/Beast.png" style="float: left; margin-left: 2.5%; margin-top: -6%; height: 0.75%;">
+            <p style="margin-left: 3%; margin-top: -3.75%; margin-right: 52%; font-size: 2.40vh;">••••<font color="#08917e">Les Betes : </font>La Magie des Betes est une magie de metamorphose et invocation d'insecte, d'animaux, de poisson, d'oiseau, d'humain. La magie permet aussi de parler et familiariser avec toute sorte de creature. Pour les personnes les plus imaginatives elle permet de faire leur propre creature avec une bonne maitrise de cet attribut.</p>
+
+            <img src="PixelArt/Millenia/Mage/Dream.png" style="float: left; margin-left: -45%; margin-top: 1%; height: 0.75%;">
+            <p style="margin-left: 55%; margin-top: -8.5%; margin-right: 3%; font-size: 2.40vh;">•••••<font color="#cf931d">Les Reves/Cauchemars : </font>La Magie des Reve et des Cauchemars a pour capacite de lire dans les pense, les desire et sentiment des etres vivants, il est donc possible de prevoir les attaques d'adversaire. D'ou son nom il est possible de facilement endormir un ennemi et influencer ses reves et cauchemars ou meme les rendre realite. En dernier capacite il est possible d'influencer les sentiments des autres en jouant sur leurs emotions et rendant leur espoir grand ou non leur donnant la motivation on non.</p>
 
             <a href="HeadinCloud.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
-                <img src="suite/Gauche/Head.png" id="Pixel" style="opacity: 1; margin-top: 305.5%; margin-left: -49%;"> 
-                <img src="suite/Gauche/Headsus.png" id="PixelSouri" style="opacity: 0; margin-top: 305%; margin-left: -49%;">
+                <img src="suite/Gauche/Head.png" id="Pixel" style="opacity: 1; margin-top: 405.5%; margin-left: -49%;"> 
+                <img src="suite/Gauche/Headsus.png" id="PixelSouri" style="opacity: 0; margin-top: 405%; margin-left: -49%;">
             </a>
 
             <a href="../Projet.html" onmouseover="HoverIcon('Proj','ProjSouri')" onmouseout="PasHover('Proj','ProjSouri')">
-                <img src="suite/Accueil.png" id="Proj" style="opacity: 1; margin-top: 305.5%; margin-left: -24%;"> 
-                <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 305%; margin-left: -24%;">
+                <img src="suite/Accueil.png" id="Proj" style="opacity: 1; margin-top: 405.5%; margin-left: -24%;"> 
+                <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 405%; margin-left: -24%;">
             </a>
 
             <a href="Bot.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
-                <img src="suite/Droite/Botapr.png" id="Jar" style="opacity: 1; margin-top: 305.5%; margin-left: -3%;">
-                <img src="suite/Droite/Botsus.png" id="JarSouri" style="opacity: 0; margin-top: 305%; margin-left: -3%;">
+                <img src="suite/Droite/Botapr.png" id="Jar" style="opacity: 1; margin-top: 405.5%; margin-left: -3%;">
+                <img src="suite/Droite/Botsus.png" id="JarSouri" style="opacity: 0; margin-top: 405%; margin-left: -3%;">
             </a>
 
         </div>
