--- a/Projet.html
+++ b/Projet.html
@@ -75,6 +75,11 @@
                     <source src="Musique/Stardust Diving  Omori [30 Minutes Extended].mp3" type="audio/mp3">
                 </audio>
             </div>
+
+            <div id="Anime">
+                <img src="Alloo/Silver spears ataks.gif" style="height: 90%; margin-left: 140%;">
+            </div>
+
             <div id="Crédit">
                 <a id="LienGit" href="https://github.com/KylaCrea5" target="_blank" onmouseover="HoverIcon('Git','GitSouri')" onmouseout="PasHover('Git','GitSouri')">
                 <img src="Alloo/Git1.png" id="Git" style="opacity: 1;">
