--- a/Moi.html
+++ b/Moi.html
@@ -63,7 +63,7 @@
             </div>
 
             <div id="Anime">
-                <img src="Alloo/Cour coté.gif" style="height: 90%; margin-left: 90%;">
+                <img src="Alloo/Cours Eillie Ruby.gif" style="height: 90%; margin-left: 90%;">
             </div>
 
             <div id="Crédit">
