--- a/Projet.html
+++ b/Projet.html
@@ -96,10 +96,10 @@
                 </h1>
 
                 <h1 style="margin-top: -2%;">
-                    Image de font, pensé et réalisé par <a id="AboutKyla" href="" target="_blank">Kyla Crea</a> pour le site
+                    Image de font, pensé et réalisé par <a id="AboutKyla" href="/Moi.html" target="_blank">Kyla Crea</a> pour le site
                 </h1>
 
-                <h1 style="margin-top: -2%;">Copyright © 2022,  <a id="AboutKyla" href="" target="_blank">Kyla Crea</a>, tout droit réservé</h1>
+                <h1 style="margin-top: -2%;">Copyright © 2022,  <a id="AboutKyla" href="/Moi.html" target="_blank">Kyla Crea</a>, tout droit réservé</h1>
 
             </div>
         </div>
