--- a/Projet.html
+++ b/Projet.html
@@ -20,9 +20,9 @@
             </nav>
 
             <div id="LesProjets">
-                <a  href="Proj/Bot.html" onmouseover="HoverIcon('BotD','BotDSouri')" onmouseout="PasHover('BotD','BotDSouri')">
-                    <img src="Alloo/Projet/Bot.png"  id="BotD" style="opacity: 1;">
-                    <img src="Alloo/Projet/Bot2.png" id="BotDSouri" style="opacity: 0;">
+                <a  href="Proj/JeuDeComba.html" onmouseover="HoverIcon('BotD','BotDSouri')" onmouseout="PasHover('BotD','BotDSouri')">
+                    <img src="Alloo/Projet/Combat.png"  id="BotD" style="opacity: 1;">
+                    <img src="Alloo/Projet/Combat2.png" id="BotDSouri" style="opacity: 0;">
                 </a>
                 <a  href="Proj/Jarre.html" onmouseover="HoverIcon('JJarre','JJarreSouri')" onmouseout="PasHover('JJarre','JJarreSouri')">
                     <img src="Alloo/Projet/Jarre.png"  id="JJarre" style="opacity: 1;">
