--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -181,9 +181,9 @@
                 <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 551%; margin-left: -40%;">
             </a>
 
-            <a href="Bot.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
-                <img src="suite/Droite/Botapr.png" id="Jar" style="opacity: 1; margin-top: 551.5%; margin-left: -19%;">
-                <img src="suite/Droite/Botsus.png" id="JarSouri" style="opacity: 0; margin-top: 551%; margin-left: -19%;">
+            <a href="JeuDeComba.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
+                <img src="suite/Droite/Combat.png" id="Jar" style="opacity: 1; margin-top: 551.5%; margin-left: -19%;">
+                <img src="suite/Droite/Combasust.png" id="JarSouri" style="opacity: 0; margin-top: 551%; margin-left: -19%;">
             </a>
 
         </div>
