--- a/Proj/Jarre.html
+++ b/Proj/Jarre.html
@@ -46,9 +46,9 @@
             <h1 style="float:left; margin-top: 85%; margin-left: 30%;"> <font color="#155715">Conclusion</font></h1>
             <p style="margin-left: 2%; margin-right: 2%; margin-top: 19%;">Ce jeu de jarre a ete un grand avancement pour moi, je l'ai commence en Novembre 2021, apres avoir commence une formation en Autodidactes en C#, apres avoir appris les bases, j'ai decide de faire une pause et de faire un programme sans aide pour assimiler les bases du C#, j'ai aussi du me servir de la documentation disponible pour utiliser de nouvelles choses, un programme tres enrichissant pour moi. Autrement, c'etait un programme que j'avais deja fait en Python en Terminal, j'ai donc appris aussi beaucoup de mes erreurs sur ma facon de coder.</p>
 
-            <a href="JeuDeComba.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
-                <img src="suite/Gauche/Combat.png" id="Pixel" style="opacity: 1; margin-top: 100.5%; margin-left: -46%;"> 
-                <img src="suite/Gauche/Combatsus.png" id="PixelSouri" style="opacity: 0; margin-top: 100%; margin-left: -46%;">
+            <a href="Fate.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
+                <img src="suite/Gauche/Fate.png" id="Pixel" style="opacity: 1; margin-top: 100.5%; margin-left: -46%;"> 
+                <img src="suite/Gauche/Fatesus.png" id="PixelSouri" style="opacity: 0; margin-top: 100%; margin-left: -46%;">
             </a>
 
             <a href="../Projet.html" onmouseover="HoverIcon('Proj','ProjSouri')" onmouseout="PasHover('Proj','ProjSouri')">
@@ -56,9 +56,9 @@
                 <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 100%; margin-left: -20%;">
             </a>
 
-            <a href="Lab.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
-                <img src="suite/Droite/Lab.png" id="Jar" style="opacity: 1; margin-top: 100.5%;">
-                <img src="suite/Droite/Labsus.png" id="JarSouri" style="opacity: 0; margin-top: 100%;">
+            <a href="HeadinCloud.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
+                <img src="suite/Droite/Head.png" id="Jar" style="opacity: 1; margin-top: 100.5%;">
+                <img src="suite/Droite/Headsus.png" id="JarSouri" style="opacity: 0; margin-top: 100%;">
             </a>
 
         </div>
