--- a/Proj/JeuDeComba.html
+++ b/Proj/JeuDeComba.html
@@ -65,9 +65,9 @@
             <h1 style="float:left; margin-top: 96.25%; margin-left: 31%;"> <font color="#b62638">Conclusion</font></h1>
             <p style="margin-left: 2%; margin-right: 2%; margin-top: 17.5%;">Ce projet est le premier projet de fin de chapitre qui concerne les notions de base du C#, c'est un projet réalisé en groupe de 3 personnes et ça a été une expérience en projet du groupe sur un projet plus conséquent. Cela m'a appris à border le comportement de travail d'équipe et les outils sont de mise comme GitHub. Avec ce projet nous avons abordé les notions de POO en C# et appris à se servir d'accesseur (get, set) et les notions de base de son et d'interaction avec l'interface graphique plus poussé.</p>
 
-            <a href="PixelArt.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
-                <img src="suite/Gauche/Art.png" id="Pixel" style="opacity: 1; margin-top: 126.5%; margin-left: -48%;"> 
-                <img src="suite/Gauche/Artsus.png" id="PixelSouri" style="opacity: 0; margin-top: 126%; margin-left: -48%;">
+            <a href="Blackjack.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
+                <img src="suite/Gauche/BlackJack.png" id="Pixel" style="opacity: 1; margin-top: 126.5%; margin-left: -48%;"> 
+                <img src="suite/Gauche/BlackJacksus.png" id="PixelSouri" style="opacity: 0; margin-top: 126%; margin-left: -48%;">
             </a>
 
             <a href="../Projet.html" onmouseover="HoverIcon('Proj','ProjSouri')" onmouseout="PasHover('Proj','ProjSouri')">
@@ -75,9 +75,9 @@
                 <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 126%; margin-left: -23%;">
             </a>
 
-            <a href="Jarre.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
-                <img src="suite/Droite/Jarre.png" id="Jar" style="opacity: 1; margin-top: 126.5%; margin-left : -2%">
-                <img src="suite/Droite/Jarresup.png" id="JarSouri" style="opacity: 0; margin-top: 126%; margin-left : -2%">
+            <a href="PixelArt.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
+                <img src="suite/Droite/Art.png" id="Jar" style="opacity: 1; margin-top: 126.5%; margin-left : -2%">
+                <img src="suite/Droite/Artsus.png" id="JarSouri" style="opacity: 0; margin-top: 126%; margin-left : -2%">
             </a>
 
         </div>
