--- a/Proj/Morpion.html
+++ b/Proj/Morpion.html
@@ -41,9 +41,9 @@
             <h1 style="float:left; margin-top: 66%; margin-left: 29%;"> <font color="#142450">Conclusion</font></h1>
             <p style="margin-left: 2%; margin-right: 2%; margin-top: 14.5%;">Ce Programme a ete fait en classe de Terminal et etait le projet qui a ete un des plus laborieux mais aussi un des plus interessant et agreable a faire avec une sensation d'evolution. Il m'a beaucoup apporte sur le fonctionnement de la POO et sur comment faire. Se fus aussi la premier fois que j'ai touche aux IA et ça m'a beaucoup passionne d'y toucher et j'ai aussi touche a de l'interface graphique a l'aide de Pygame, un programme en apparence simple mais qui m'a permis de toucher a un peu tout.</p>
 
-            <a href="Fate.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
-                <img src="suite/Gauche/Fate.png" id="Pixel" style="opacity: 1; margin-top: 80.5%; margin-left: -49%;"> 
-                <img src="suite/Gauche/Fatesus.png" id="PixelSouri" style="opacity: 0; margin-top: 80%; margin-left: -49%;">
+            <a href="PixelArt.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
+                <img src="suite/Gauche/Art.png" id="Pixel" style="opacity: 1; margin-top: 80.5%; margin-left: -49%;"> 
+                <img src="suite/Gauche/Artsus.png" id="PixelSouri" style="opacity: 0; margin-top: 80%; margin-left: -49%;">
             </a>
 
             <a href="../Projet.html" onmouseover="HoverIcon('Proj','ProjSouri')" onmouseout="PasHover('Proj','ProjSouri')">
@@ -51,9 +51,9 @@
                 <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 80%; margin-left: -24%;">
             </a>
 
-            <a href="HeadinCloud.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
-                <img src="suite/Droite/Head.png" id="Jar" style="opacity: 1; margin-top: 80.5%; margin-left: -3%;">
-                <img src="suite/Droite/Headsus.png" id="JarSouri" style="opacity: 0; margin-top: 80%; margin-left: -3%;">
+            <a href="Fate.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
+                <img src="suite/Droite/Fate.png" id="Jar" style="opacity: 1; margin-top: 80.5%; margin-left: -3%;">
+                <img src="suite/Droite/Fatesus.png" id="JarSouri" style="opacity: 0; margin-top: 80%; margin-left: -3%;">
             </a>
 
         </div>
