--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -171,9 +171,9 @@
                 Malus : A moins de la casser, le mur ne disparaitra pas. Les attaques alliees et ennemies ne peuvent pas passer au travers sans briser le mur.</p>
             
             
-            <a href="HeadinCloud.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
-                <img src="suite/Gauche/Head.png" id="Pixel" style="opacity: 1; margin-top: 551.5%; margin-left: -65%;"> 
-                <img src="suite/Gauche/Headsus.png" id="PixelSouri" style="opacity: 0; margin-top: 551%; margin-left: -65%;">
+            <a href="JeuDeComba.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
+                <img src="suite/Gauche/Combat.png" id="Pixel" style="opacity: 1; margin-top: 551.5%; margin-left: -65%;"> 
+                <img src="suite/Gauche/Combatsus.png" id="PixelSouri" style="opacity: 0; margin-top: 551%; margin-left: -65%;">
             </a>
 
             <a href="../Projet.html" onmouseover="HoverIcon('Proj','ProjSouri')" onmouseout="PasHover('Proj','ProjSouri')">
@@ -181,9 +181,9 @@
                 <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 551%; margin-left: -40%;">
             </a>
 
-            <a href="JeuDeComba.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
-                <img src="suite/Droite/Combat.png" id="Jar" style="opacity: 1; margin-top: 551.5%; margin-left: -19%;">
-                <img src="suite/Droite/Combasust.png" id="JarSouri" style="opacity: 0; margin-top: 551%; margin-left: -19%;">
+            <a href="Morpion.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
+                <img src="suite/Droite/Morp.png" id="Jar" style="opacity: 1; margin-top: 551.5%; margin-left: -19%;">
+                <img src="suite/Droite/Morpsus.png" id="JarSouri" style="opacity: 0; margin-top: 551%; margin-left: -19%;">
             </a>
 
         </div>
